--- a/tasks/extensions/detect_repmgr_primary.yml
+++ b/tasks/extensions/detect_repmgr_primary.yml
@@ -9,6 +9,7 @@
   become: yes
   become_user: "{{ postgresql_service_user }}"
   ignore_errors: yes
+  check_mode: no
 
 - name: Repmgr | Debug check
   debug:
