--- a/tasks/install_apt.yml
+++ b/tasks/install_apt.yml
@@ -25,6 +25,7 @@
     dest: /etc/apt/preferences.d/apt_postgresql_org_pub_repos_apt.pref
     mode: 0640
   when: postgresql_apt_pin_priority and postgresql_install_repository
+  become: yes
 
 - name: PostgreSQL | Make sure the dependencies are installed | apt
   apt:
@@ -32,6 +33,7 @@
     state: present
     update_cache: yes
     cache_valid_time: "{{ apt_cache_valid_time | default (3600) }}"
+  become: yes
 
 - name: PostgreSQL | Install PostgreSQL | apt
   apt:
@@ -45,6 +47,7 @@
     cache_valid_time: "{{ apt_cache_valid_time | default (3600) }}"
   register: postgresql_install
   environment: "{{ postgresql_env }}"
+  become: yes
 
 - name: PostgreSQL | Shutdown systemd-based instance upon first installation
   service:
