--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -14,7 +14,7 @@
     port: "{{ postgresql_port }}"
     state: present
     login_user: "{{ postgresql_admin_user }}"
-  # no_log: true
+  no_log: yes
   become: yes
   become_user: "{{ postgresql_admin_user }}"
   with_items: "{{ postgresql_users }}"
