--- a/defaults/main/002-repmgr.yml
+++ b/defaults/main/002-repmgr.yml
@@ -6,7 +6,10 @@ repmgr_password: repmgr
 repmgr_database: repmgr
 repmgr_conninfo: "host={{ ansible_hostname }} user={{ repmgr_user }} dbname={{ repmgr_database }} connect_timeout=2"
 repmgr_data_directory: "{{ postgresql_data_directory }}"
-repmgr_version: 5.1
+repmgr_version: 5.2
+
+repmgr_master_hostname: "{{ repmgr_master }}"
+
 
 repmgr_setup_ssh: no
 
@@ -23,7 +26,6 @@ repmgr_apt_repository: "deb [arch=amd64] https://dl.2ndquadrant.com/default/rele
 repmgr_primary: false
 repmgr_config_directory: "{{ postgresql_conf_directory }}"
 repmgr_replication_user: "{{ repmgr_user }}"
-repmgr_replication_type: physical
 repmgr_location: default
 repmgr_use_replication_slots: "no"
 repmgr_witness_sync_interval: 15
