--- a/inventory.yml
+++ b/inventory.yml
@@ -3,8 +3,9 @@ all:
   vars:
     ansible_python_interpreter: /usr/bin/python3
     postgresql_version: 12
-    repmgr_version: "5.1"
+    repmgr_version: "5.2"
     repmgr_master: pgsql01
+    repmgr_master_hostname: pgsql01
 pgcluster:
   hosts:
     pgsql01:
