--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -131,17 +131,25 @@
   notify: restart postgresql
 
 - name: PostgreSQL | Reload all conf files
-  shell: 
-    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
-    executable: /bin/bash
-  become_user: "{{ postgresql_service_user }}"
+  service:
+    name: "{{ postgresql_service_name }}"
+    state: reloaded
+#   shell: 
+#     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
+#     executable: /bin/bash
+  become: yes
+#   become_user: "{{ postgresql_service_user }}"
   when: postgresql_configuration_pt1.changed or postgresql_configuration_pt2.changed or postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
 
 - name: PostgreSQL | Restart service
-  shell: 
-    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
-    executable: /bin/bash
-  become_user: "{{ postgresql_service_user }}"
+  service:
+    name: "{{ postgresql_service_name }}"
+    state: restarted
+#   shell: 
+#     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
+#     executable: /bin/bash
+  become: yes
+#   become_user: "{{ postgresql_service_user }}"
   when: postgresql_configuration_pt2.changed
   register: postgresql_restart
-  failed_when: postgresql_restart.rc not in [0, 2] # handle already-running return codes
+#   failed_when: postgresql_restart.rc not in [0, 2] # handle already-running return codes
