sudo required for apt

--- a/tasks/extensions/repmgr.yml
+++ b/tasks/extensions/repmgr.yml
@@ -3,6 +3,7 @@
   apt_key:
     url: "{{ repmgr_gpg_key_url }}"
   when: ansible_pkg_mgr == "apt"
+  become: yes
 
 - name: PostgreSQL | Extensions | Add 2nd Quadrant repo for repmgr | apt
   apt_repository:
@@ -25,3 +26,4 @@
     cache_valid_time: "{{ apt_cache_valid_time | default (3600) }}"
   when: ansible_pkg_mgr == "apt"
   notify: restart postgresql
+  become: yes
