--- a/defaults/main/002-repmgr.yml
+++ b/defaults/main/002-repmgr.yml
@@ -6,6 +6,7 @@ repmgr_password: repmgr
 repmgr_database: repmgr
 repmgr_conninfo: "host={{ ansible_hostname }} user={{ repmgr_user }} dbname={{ repmgr_database }} connect_timeout=2"
 repmgr_data_directory: "{{ postgresql_data_directory }}"
+repmgr_setup_ssh: no
 repmgr_version: 5.3
 
 # Optional configuration items
